--- a/reasons.html
+++ b/reasons.html
@@ -10,7 +10,7 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: url('background.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: white;
+      color: black;
       overflow-x: hidden;
     }
 
