--- a/support.html
+++ b/support.html
@@ -47,6 +47,18 @@
     </style>
 </head>
 <body>
+    <!-- Menu -->
+<div class="menu">
+  <button class="menu-button" onclick="toggleMenu()">Menu</button>
+  <div class="dropdown" id="dropdown">
+    <a href="home.html">Home</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="countdown.html">Countdowns</a>
+    <a href="bucketlist.html">Bucket List</a>
+    <a href="reasons.html">Reasons I Love You</a>
+  </div>
+</div>
+
     <h1>Open When You Need It 💌</h1>
     <div class="container">
 
