--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #fff0f5;
-      color: #4b0082;
+      background-color: #800080;
+      color: #fff;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -130,6 +130,13 @@
   </style>
 </head>
 <body>
+
+  <!-- Date and Time Display -->
+  <div id="datetime" style="position: absolute; top: 20px; left: 20px; color: white; text-align: left;">
+    <div id="currentDate"></div>
+    <div id="currentTime" style="font-size: 0.9rem; margin-top: 2px;"></div>
+  </div>
+
   <div class="menu">
     <button class="menu-button" onclick="toggleMenu()">Menu</button>
     <div class="dropdown" id="dropdown">
@@ -211,6 +218,19 @@
       const togetherText = `YEARS: ${years}, MONTHS: ${months % 12}, WEEKS: ${weeks % 4}, DAYS: ${days % 7}, HOURS: ${hours % 24}, MINUTES: ${minutes % 60}, SECONDS: ${seconds % 60}`;
       document.getElementById("togetherTime").innerText = togetherText;
     }
+
+    // Date and Time Function
+    function updateDateTime() {
+      const now = new Date();
+      const date = now.toDateString();
+      const time = now.toLocaleTimeString();
+
+      document.getElementById("currentDate").innerText = date;
+      document.getElementById("currentTime").innerText = time;
+    }
+
+    setInterval(updateDateTime, 1000);
+    updateDateTime();
   </script>
 </body>
 </html>
