--- a/home.html
+++ b/home.html
@@ -140,7 +140,7 @@
   <div class="menu">
     <button class="menu-button" onclick="toggleMenu()">Menu</button>
     <div class="dropdown" id="dropdown">
-      <a href="#" onclick="refreshPage()">Home</a>
+      <a href="home.html">Home</a>
       <a href="gallery.html">Gallery</a>
       <a href="countdown.html">Countdowns</a>
       <a href="bucketlist.html">Bucket List</a>
@@ -167,10 +167,6 @@
       dropdown.style.display = dropdown.style.display === "flex" ? "none" : "flex";
     }
 
-    function refreshPage() {
-      location.href = "index.html";
-    }
-
     const bibleVerses = [
       "'I have found the one whom my soul loves.' – Song of Solomon 3:4",
       "'Love is patient, love is kind.' – 1 Corinthians 13:4",
@@ -178,8 +174,49 @@
       "'I thank my God every time I remember you.' – Philippians 1:3",
       "'Above all, love each other deeply.' – 1 Peter 4:8",
       "'Let all that you do be done in love.' – 1 Corinthians 16:14",
+      "'You are altogether beautiful, my love; there is no flaw in you.' – Song of Solomon 4:7",
+      "'The Lord is compassionate and gracious, slow to anger, abounding in love.' – Psalm 103:8",
+      "'Be devoted to one another in love. Honor one another above yourselves.' – Romans 12:10",
+      "'There is no fear in love. But perfect love drives out fear.' – 1 John 4:18",
+      "'Let love and faithfulness never leave you.' – Proverbs 3:3",
+      "'And now these three remain: faith, hope and love. But the greatest of these is love.' – 1 Corinthians 13:13",
+      "'My beloved is mine and I am his.' – Song of Solomon 2:16",
+      "'This is my commandment, that you love one another as I have loved you.' – John 15:12",
       "'The Lord has done great things for us, and we are filled with joy.' – Psalm 126:3",
-      "'You are altogether beautiful, my love; there is no flaw in you.' – Song of Solomon 4:7"
+      "'As I have loved you, so you must love one another.' – John 13:34",
+      "'Rejoice in the Lord always. I will say it again: Rejoice!' – Philippians 4:4",
+      "'He who finds a wife finds what is good and receives favor from the Lord.' – Proverbs 18:22",
+      "'God is love. Whoever lives in love lives in God, and God in them.' – 1 John 4:16",
+      "'Set me as a seal upon your heart.' – Song of Solomon 8:6",
+      "'Love does no harm to a neighbor. Therefore love is the fulfillment of the law.' – Romans 13:10",
+      "'Be completely humble and gentle; be patient, bearing with one another in love.' – Ephesians 4:2",
+      "'We love because He first loved us.' – 1 John 4:19",
+      "'How good and pleasant it is when God’s people live together in unity!' – Psalm 133:1",
+      "'The steadfast love of the Lord never ceases.' – Lamentations 3:22",
+      "'He brought me to the banqueting house, and his banner over me was love.' – Song of Solomon 2:4",
+      "'Do everything in love.' – 1 Corinthians 16:14",
+      "'Love must be sincere. Hate what is evil; cling to what is good.' – Romans 12:9",
+      "'A friend loves at all times.' – Proverbs 17:17",
+      "'Let the morning bring me word of your unfailing love.' – Psalm 143:8",
+      "'I will betroth you to me forever.' – Hosea 2:19",
+      "'With all humility and gentleness, with patience, bearing with one another in love.' – Ephesians 4:2",
+      "'Owe no one anything, except to love each other.' – Romans 13:8",
+      "'Love never ends.' – 1 Corinthians 13:8",
+      "'Better is a dinner of herbs where love is than a fattened ox and hatred with it.' – Proverbs 15:17",
+      "'Hatred stirs up conflict, but love covers over all wrongs.' – Proverbs 10:12",
+      "'Keep on loving one another as brothers and sisters.' – Hebrews 13:1",
+      "'Do not let your hearts be troubled. Trust in God.' – John 14:1",
+      "'Give thanks to the Lord, for he is good; his love endures forever.' – Psalm 107:1",
+      "'Let us not love with words or speech but with actions and in truth.' – 1 John 3:18",
+      "'Clothe yourselves with compassion, kindness, humility, gentleness and patience.' – Colossians 3:12",
+      "'Carry each other’s burdens, and in this way you will fulfill the law of Christ.' – Galatians 6:2",
+      "'Therefore encourage one another and build each other up.' – 1 Thessalonians 5:11",
+      "'Blessed are the peacemakers, for they will be called children of God.' – Matthew 5:9",
+      "'A new command I give you: Love one another.' – John 13:34",
+      "'You are the light of the world.' – Matthew 5:14",
+      "'Let your light shine before others.' – Matthew 5:16",
+      "'You will seek me and find me when you seek me with all your heart.' – Jeremiah 29:13",
+      "'I am my beloved’s and my beloved is mine.' – Song of Solomon 6:3"
     ];
 
     const randomVerse = bibleVerses[Math.floor(Math.random() * bibleVerses.length)];
