--- a/countdown.html
+++ b/countdown.html
@@ -209,7 +209,7 @@
 
       // Pinned Anniversary Countdown
       const anniversaryDate = getNextAnniversary();
-      list.appendChild(createCountdownBox("💜 Monthly Anniversary 💜", anniversaryDate, false));
+      list.appendChild(createCountdownBox("💜 Anniversary 💜", anniversaryDate, false));
 
       // Custom Countdowns
       const saved = loadCountdowns();
