--- a/reasons.html
+++ b/reasons.html
@@ -44,6 +44,11 @@
       color: #ff6ec7;
     }
 
+    .sidebar a.active {
+      color: #ff6ec7;
+      font-weight: bold;
+    }
+
     main {
       margin-left: 240px;
       padding: 30px;
@@ -79,6 +84,7 @@
     <a href="countdowns.html">Countdowns</a>
     <a href="bucketlist.html">Bucket List</a>
     <a href="howlong.html">How Long</a>
+    <a href="reasons.html" class="active">Why I Love You</a>
   </div>
 
   <main>
