--- a/reasons.html
+++ b/reasons.html
@@ -81,7 +81,7 @@
     <h2>Menu</h2>
     <a href="home.html">Home</a>
     <a href="gallery.html">Gallery</a>
-    <a href="countdowns.html">Countdowns</a>
+    <a href="countdown.html">Countdowns</a>
     <a href="bucketlist.html">Bucket List</a>
     <a href="howlong.html">How Long</a>
     <a href="reasons.html" class="active">Why I Love You</a>
